added option to install teradata's version of presto  (compatible with Tableau)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,3 +29,7 @@ presto_http_port: 8080
 
 presto_cluster_name: prod
 
+presto_distrib: facebook
+
+presto_coordinator_host: "{{ groups['presto-coordinator'].0 }}"
+
